@@ -79,6 +79,9 @@
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>3.1.2</version>
+          <configuration>
+            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
